--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dompurify": "^3.3.1",
     "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-dnd": "^16.0.1",
