--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "estate-agent-app",
+  "homepage": "https://github.com/yzindu/estate-agent-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest",                  
-    "test:watch": "vitest --watch",    
+    "test": "vitest",
+    "test:watch": "vitest --watch",
     "test:ui": "vitest --ui"
   },
   "dependencies": {
@@ -34,6 +37,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "happy-dom": "^20.0.11",
     "vite": "^7.2.4",
